# ffmpeg-tutorial

./: CMakeLists.txt  README.txt  log4j.properties  make_debug.sh
src/: CMakeLists.txt  tutorial01.cc
